plugins {
    alias (libs.plugins.spring.boot)
    id 'java'
    id 'eclipse'
    id 'idea'
    id 'jacoco'
    id 'catalogservice.java-checks'
}

group 'fi.vrk.xroad.catalog.persistence'
sourceCompatibility = 21
targetCompatibility = 21

repositories {
    mavenCentral()
}

dependencies {
    implementation (libs.spring.boot.jpa)
    implementation (libs.h2.database)
    implementation (libs.postgresql)
    implementation (libs.guava)
    implementation (libs.lombok)
    implementation (libs.lombok)
    annotationProcessor (libs.lombok)
    testImplementation (libs.spring.boot.test)
    testImplementation (libs.lombok)
    testAnnotationProcessor (libs.lombok)
}


test {
    systemProperty 'user.timezone', 'Europe/Helsinki'
    useJUnitPlatform {
        includeEngines 'junit-jupiter'
    }
    finalizedBy jacocoTestReport
}

tasks.withType(org.springframework.boot.gradle.tasks.run.BootRun) {
    systemProperty 'spring.profiles.active', System.getProperty('spring.profiles.active', 'default')
}

bootJar {
    enabled = false
}

jar {
    enabled = true
    archiveClassifier = ''
}

springBoot {
    mainClass = 'fi.vrk.xroad.catalog.persistence.Application'
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
    }
}
